<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.dev.clevertonsantos.navigationapp.ui.start.StartFragment"
        android:label="@string/start"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.dev.clevertonsantos.navigationapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.dev.clevertonsantos.navigationapp.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/login_fragment" >
        <action
            android:id="@+id/action_loginFragment_to_nav_graph_registration"
            app:destination="@id/nav_graph_registration" />
    </fragment>

    <navigation
        android:id="@+id/nav_graph_registration"
        app:startDestination="@id/profileDataFragment">

        <fragment
            android:id="@+id/chooseCredentialsFragment"
            android:name="com.dev.clevertonsantos.navigationapp.ui.registration.choosecredentials.ChooseCredentialsFragment"
            android:label="fragment_choose_credentials"
            tools:layout="@layout/fragment_choose_credentials" >

            <argument
                android:name="name"
                app:argType="string"
                app:nullable="false"/>
        </fragment>
        <fragment
            android:id="@+id/profileDataFragment"
            android:name="com.dev.clevertonsantos.navigationapp.ui.registration.profile.ProfileDataFragment"
            android:label="fragment_profile_data"
            tools:layout="@layout/fragment_profile_data" >
            <action
                android:id="@+id/action_profileDataFragment_to_chooseCredentialsFragment"
                app:destination="@id/chooseCredentialsFragment" />
        </fragment>
    </navigation>

</navigation>