<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".ui.registration.choosecredentials.ChooseCredentialsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textChooseCredentialsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutChooseCredentialsUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Fulano, choose your credentials" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutChooseCredentialsUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/choose_credentials_input_layout_hint_username"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutChooseCredentialsPassword"
        app:layout_constraintTop_toBottomOf="@+id/textChooseCredentialsName"
        tools:layout_editor_absoluteX="18dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputChooseCredentialsUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutChooseCredentialsPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/choose_credentials_input_layout_hint_password"
        app:layout_constraintBottom_toTopOf="@+id/buttonChooseCredentialsNext"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutChooseCredentialsUsername"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutChooseCredentialsUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutChooseCredentialsUsername">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/inputChooseCredentialsPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonChooseCredentialsNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutChooseCredentialsPassword"
        tools:layout_editor_absoluteX="18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>